uefi-capsule: Ensure SBAT metadata is added correctly
The current approach of adding SBAT metadata after linking is creating
an image that is badly formed in 2 ways:
- The SBAT section's file offset and size are not a multiple of the
file alignment.
- The SBAT section has a virtual address of zero. EDK2 loads the header
here, and so it gets rejected.

This changes the approach to match shim, where an object file is
created with a .sbat section and then the linker takes care of placing
the section at a more appropriate virtual address.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -37,10 +37,10 @@ option('soup_session_compat', type : 'boolean', value : true, description : 'ena
 option('curl', type : 'boolean', value : true, description : 'enable libcurl support')
 option('udevdir', type: 'string', value: '', description: 'Directory for udev rules')
 option('efi-cc', type : 'string', value : 'gcc', description : 'the compiler to use for EFI modules')
+option('efi-crtdir', type : 'string', description : 'path to the EFI crt directory')
 option('efi-ld', type : 'string', value : 'ld', description : 'the linker to use for EFI modules')
 option('efi-objcopy', type : 'string', value : 'objcopy', description : 'the objcopy utility to use for EFI modules')
 option('efi-libdir', type : 'string', description : 'path to the EFI lib directory')
-option('efi-ldsdir', type : 'string', description : 'path to the EFI lds directory')
 option('efi-includedir', type : 'string', value : '/usr/include/efi', description : 'path to the EFI header directory')
 option('efi_os_dir', type: 'string', description : 'the hardcoded name of OS directory in ESP, e.g. fedora')
 option('efi_sbat_fwupd_generation', type : 'integer', value : 1, description : 'SBAT fwupd generation')
