synaptics-mst: Read the customer ID (board ID) in a more safe way
Also split out the firmware parsing to an object so we can check the firmware
using firmware-parse and also fuzz it.

See also: https://github.com/fwupd/fwupd/issues/1665

--- a/plugins/synaptics-mst/meson.build
+++ b/plugins/synaptics-mst/meson.build
@@ -15,6 +15,7 @@ shared_module('fu_plugin_synaptics_mst',
     'fu-synaptics-mst-common.c',
     'fu-synaptics-mst-connection.c',
     'fu-synaptics-mst-device.c',
+    'fu-synaptics-mst-firmware.c',      # fuzzing
   ],
   include_directories : [
     root_incdir,
@@ -48,6 +49,7 @@ if get_option('tests')
       'fu-synaptics-mst-common.c',
       'fu-synaptics-mst-connection.c',
       'fu-synaptics-mst-device.c',
+      'fu-synaptics-mst-firmware.c',
     ],
     include_directories : [
       root_incdir,
