Add meson script and source files for Kinetic's MST plugin

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -25,6 +25,7 @@ subdir('goodix-moc')
 subdir('hailuck')
 subdir('iommu')
 subdir('jabra')
+subdir('kinetic-mst')
 subdir('linux-lockdown')
 subdir('linux-sleep')
 subdir('linux-swap')
