spi: Move all the IFD parsing to the new 'spi' plugin
We do not want to export this unfinished API, and it's probably best just to
not compile it by default until it is actually useful.

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -44,6 +44,7 @@ subdir('redfish')
 subdir('rts54hid')
 subdir('rts54hub')
 subdir('solokey')
+subdir('spi')
 subdir('steelseries')
 subdir('superio')
 subdir('synaptics-cxaudio')
