trivial: Actually print the po/test-deps failure on the console

--- a/meson.build
+++ b/meson.build
@@ -376,7 +376,7 @@ if build_standalone and get_option('plugin_uefi_capsule')
   conf.set_quoted('EFI_MACHINE_TYPE_NAME', EFI_MACHINE_TYPE_NAME)
   r = run_command([python3, 'po/test-deps'])
   if r.returncode() != 0
-    error(r.stderr())
+    error(r.stdout())
   endif
 endif
 
