Allow objects to deserialize to XML
This makes a lot more sense; we can parse a firmware and export the same XML
we would use in a .builder.xml file. This allows us to two two things:

 * Check we can round trip from XML -> binary -> XML

 * Using a .builder.xml file we can check ->write() is endian safe

--- a/data/bash-completion/fwupdtool.in
+++ b/data/bash-completion/fwupdtool.in
@@ -6,6 +6,7 @@ _fwupdtool_cmd_list=(
 	'esp-unmount'
 	'firmware-build'
 	'firmware-convert'
+	'firmware-export'
 	'firmware-extract'
 	'firmware-parse'
 	'get-updates'
