--- a/plugins/spi/meson.build
+++ b/plugins/spi/meson.build
@@ -34,3 +34,39 @@ shared_module('fu_plugin_spi',
   ],
 )
 endif
+
+if get_option('tests') and get_option('lzma')
+  e = executable(
+    'spi-self-test',
+    fu_hash,
+    sources : [
+      'fu-self-test.c',
+      'fu-efi-common.c',
+      'fu-efi-firmware-common.c',
+      'fu-efi-firmware-file.c',
+      'fu-efi-firmware-filesystem.c',
+      'fu-efi-firmware-section.c',
+      'fu-efi-firmware-volume.c',
+      'fu-ifd-bios.c',
+      'fu-ifd-common.c',
+      'fu-ifd-firmware.c',
+      'fu-ifd-image.c',
+    ],
+    include_directories : [
+      root_incdir,
+      fwupd_incdir,
+      fwupdplugin_incdir,
+    ],
+    dependencies : [
+      plugin_deps,
+      lzma,
+    ],
+    link_with : [
+      fwupd,
+      fwupdplugin,
+    ],
+    install : true,
+    install_dir : installed_test_bindir,
+  )
+  test('spi-self-test', e)
+endif
