--- a/contrib/PKGBUILD
+++ b/contrib/PKGBUILD
@@ -11,7 +11,7 @@ license=('GPL2')
 depends=('libgusb' 'modemmanager' 'tpm2-tss')
 makedepends=('meson' 'valgrind' 'gobject-introspection' 'gtk-doc' 'python-pillow' 'git'
              'python-cairo' 'noto-fonts' 'noto-fonts-cjk' 'python-gobject' 'vala'
-             'curl' 'polkit' 'gcab')
+             'curl' 'polkit' 'gcab' 'xz')
 
 pkgver() {
     cd ${pkgname}
@@ -28,6 +28,8 @@ build() {
         export CI="--wrap-mode=default"
     fi
     arch-meson -D b_lto=false $CI ../build \
+        -Dplugin_spi=true \
+        -Dlzma=true \
         -Defi_sbat_distro_id="arch" \
         -Defi_sbat_distro_summary="Arch Linux" \
         -Defi_sbat_distro_pkgname="${pkgname}" \
