.github/workflows/main.yml: Build fwupd from ports and upload binary pkg artifact

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Continuous Integration
 on:
   push:
-    branches: [ master, 1_4_X, 1.5.7-FreeBSD-CI ]
+    branches: [ master, 1_4_X, wip_bsd_ci ]
   pull_request:
-    branches: [ master, 1_4_X, 1.5.7-FreeBSD-CI ]
+    branches: [ master, 1_4_X, wip_bsd_ci ]
 
 jobs:
   #   abi:
