--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -23,6 +23,7 @@ subdir('flashrom')
 subdir('fresco-pd')
 subdir('goodix-moc')
 subdir('hailuck')
+subdir('intel-spi')
 subdir('iommu')
 subdir('jabra')
 subdir('linux-lockdown')
@@ -44,7 +45,6 @@ subdir('redfish')
 subdir('rts54hid')
 subdir('rts54hub')
 subdir('solokey')
-subdir('spi')
 subdir('steelseries')
 subdir('superio')
 subdir('synaptics-cxaudio')
