Add option to disable the UEFI capsule splash screen generation
The dependencies to generate the "updating..." splash screen are non-trivial, and
pointless in headless systems.  Add an option to disable the generation entirely.

--- a/meson.build
+++ b/meson.build
@@ -385,9 +385,12 @@ if build_standalone and get_option('plugin_uefi_capsule')
           gnu_efi_arch = ''
   endif
   conf.set_quoted('EFI_MACHINE_TYPE_NAME', EFI_MACHINE_TYPE_NAME)
-  r = run_command([python3, 'po/test-deps'])
-  if r.returncode() != 0
-    error(r.stdout())
+
+  if get_option('plugin_uefi_capsule_splash')
+    r = run_command([python3, 'po/test-deps'])
+    if r.returncode() != 0
+      error(r.stdout())
+    endif
   endif
 endif
 
