--- a/meson.build
+++ b/meson.build
@@ -318,6 +318,12 @@ endif
 if cc.has_header('fnmatch.h')
   conf.set('HAVE_FNMATCH_H', '1')
 endif
+if cc.has_header('malloc.h')
+  conf.set('HAVE_MALLOC_H', '1')
+  if cc.has_function('malloc_trim', prefix: '#include <malloc.h>')
+	 conf.set('HAVE_MALLOC_TRIM', '1')
+  endif
+endif
 if cc.has_header('cpuid.h') and cc.has_header_symbol('cpuid.h', '__get_cpuid_count') and (host_cpu == 'x86' or host_cpu == 'x86_64')
   conf.set('HAVE_CPUID_H', '1')
 else
