--- a/plugins/uefi/efi/meson.build
+++ b/plugins/uefi/efi/meson.build
@@ -1,5 +1,6 @@
 efi_cc = get_option('efi-cc')
 efi_ld = get_option('efi-ld')
+efi_objcopy = get_option('efi-objcopy')
 efi_ldsdir = get_option('efi-ldsdir')
 efi_incdir = get_option('efi-includedir')
 
@@ -30,10 +31,17 @@ if not have_gnu_efi
   error('gnu-efi support requested, but headers were not found')
 endif
 
-arch_lds = 'elf_@0@_efi.lds'.format(gnu_efi_path_arch)
+arch_lds = 'efi.lds'
+arch_crt = 'crt0.o'
 if efi_ldsdir == ''
-  efi_ldsdir = join_paths(efi_libdir, 'gnuefi')
+  efi_ldsdir = join_paths(efi_libdir, 'gnuefi', gnu_efi_path_arch)
   cmd = run_command('test', '-f', join_paths(efi_ldsdir, arch_lds))
+  if cmd.returncode() != 0
+    arch_lds = 'elf_@0@_efi.lds'.format(gnu_efi_path_arch)
+    arch_crt = 'crt0-efi-@0@.o'.format(gnu_efi_path_arch)
+    efi_ldsdir = join_paths(efi_libdir, 'gnuefi')
+    cmd = run_command('test', '-f', join_paths(efi_ldsdir, arch_lds))
+  endif
   if cmd.returncode() != 0
     efi_ldsdir = efi_libdir
     cmd = run_command('test', '-f', join_paths(efi_ldsdir, arch_lds))
@@ -41,10 +49,32 @@ if efi_ldsdir == ''
       error('Cannot find @0@'.format(arch_lds))
     endif
   endif
+else
+  cmd = run_command('test', '-f', join_paths(efi_ldsdir, arch_lds))
+  if cmd.returncode() != 0
+    arch_lds = 'elf_@0@_efi.lds'.format(gnu_efi_path_arch)
+    arch_crt = 'crt0-efi-@0@.o'.format(gnu_efi_path_arch)
+    cmd = run_command('test', '-f', join_paths(efi_ldsdir, arch_lds))
+  endif
+  if cmd.returncode() != 0
+    error('Cannot find @0@'.format(arch_lds))
+  endif
+endif
+
+# is the system linker script new enough to know about SBAT?
+# i.e. gnu-efi with https://github.com/vathpela/gnu-efi/pull/14 has been installed
+efi_crtdir = efi_ldsdir
+if get_option('efi_sbat_distro_id') != ''
+  cmd = run_command('grep', '-q', 'sbat', join_paths(efi_ldsdir, arch_lds))
+  if cmd.returncode() != 0
+    warning('Cannot find SBAT section in @0@, using local copy'.format(join_paths(efi_ldsdir, arch_lds)))
+    efi_ldsdir = join_paths(meson.current_source_dir(), 'lds')
+  endif
 endif
 
 message('efi-libdir: "@0@"'.format(efi_libdir))
 message('efi-ldsdir: "@0@"'.format(efi_ldsdir))
+message('efi-crtdir: "@0@"'.format(efi_crtdir))
 message('efi-includedir: "@0@"'.format(efi_incdir))
 
 debugdir = join_paths (libdir, 'debug')
@@ -53,7 +83,6 @@ compile_args = ['-Og',
                 '--param=ssp-buffer-size=4',
                 '-fexceptions',
                 '-Wall',
-                '-Werror',
                 '-Wextra',
                 '-std=gnu11',
                 '-fpic',
@@ -70,6 +99,9 @@ compile_args = ['-Og',
                 '-DDEBUGDIR="@0@"'.format(debugdir),
                 '-isystem', efi_incdir,
                 '-isystem', join_paths(efi_incdir, gnu_efi_path_arch)]
+if get_option('werror')
+    compile_args += '-Werror'
+endif
 if efi_arch == 'x86_64'
   compile_args += ['-mno-red-zone',
                    '-mno-sse',
@@ -90,8 +122,9 @@ efi_ldflags = ['-T',
                '-Bsymbolic',
                '-nostdlib',
                '-znocombreloc',
+               '-L', efi_crtdir,
                '-L', efi_libdir,
-               join_paths(efi_ldsdir, 'crt0-efi-@0@.o'.format(gnu_efi_path_arch))]
+               join_paths(efi_crtdir, arch_crt)]
 if efi_arch == 'aarch64' or efi_arch == 'arm'
   # Aarch64 and ARM32 don't have an EFI capable objcopy. Use 'binary'
   # instead, and add required symbols manually.
@@ -104,18 +137,23 @@ endif
 libgcc_file_name = run_command(efi_cc, '-print-libgcc-file-name').stdout().strip()
 efi_name = 'fwupd@0@.efi'.format(EFI_MACHINE_TYPE_NAME)
 
-o_file = custom_target('fwupdate.o',
+o_file1 = custom_target('fwupdate.o',
                         input : 'fwupdate.c',
                         output : 'fwupdate.o',
                         command : [efi_cc, '-c', '@INPUT@', '-o', '@OUTPUT@']
                                   + compile_args)
 
 so = custom_target('fwup.so',
-                   input : o_file,
+                   input : [o_file1],
                    output : 'fwup.so',
                    command : [efi_ld, '-o', '@OUTPUT@'] +
                              efi_ldflags + ['@INPUT@'] +
                              ['-lefi', '-lgnuefi', libgcc_file_name])
+
+# sanity check the packager set this to *SOMETHING*
+if get_option('efi_sbat_distro_id') == ''
+    warning('-Defi_sbat_distro_id is unset, see plugins/uefi-capsule/README.md')
+endif
 
 app = custom_target(efi_name,
                     input : so,
@@ -137,7 +175,7 @@ app = custom_target(efi_name,
 dbg = custom_target('efi_debug',
                     input : so,
                     output : efi_name + '.debug',
-                    command : [objcopy,
+                    command : [efi_objcopy,
                                '-j', '.text',
                                '-j', '.sdata',
                                '-j', '.data',
