rename plugin: analogix-usbc -> analogix

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -2,7 +2,7 @@ subdir('acpi-dmar')
 subdir('acpi-facp')
 subdir('altos')
 subdir('amt')
-subdir('analogix-usbc')
+subdir('analogix')
 subdir('ata')
 subdir('bcm57xx')
 subdir('bios')
