--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,20 @@ on:
     branches: [ master ]
 
 jobs:
+  pre-commit:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Refresh dependencies
+        run: sudo apt update
+      - name: Install dependencies
+        run: sudo apt install shellcheck -y
+      - name: Run pre-commit hooks
+        run: |
+          ./contrib/setup
+          source venv/bin/activate
+          pre-commit run --all-files
+
   abi:
     runs-on: ubuntu-20.04
     steps:
