--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -89,7 +89,7 @@ BuildRequires: libqmi-devel >= 1.22.0
 
 %if 0%{?have_uefi}
 BuildRequires: efivar-devel >= 33
-BuildRequires: python3 python3-cairo python3-gobject python3-pillow
+BuildRequires: python3 python3-cairo python3-gobject
 BuildRequires: pango-devel
 BuildRequires: cairo-devel cairo-gobject-devel
 BuildRequires: freetype
