trivial: pre-commit: check XML for trailing whitespace too
I almost committed something with trailing whitespace :)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
     -   id: end-of-file-fixer
         types_or: [c, shell, python]
     -   id: trailing-whitespace
-        types_or: [c, shell, python]
+        types_or: [c, shell, python, xml]
     -   id: check-docstring-first
     -   id: check-merge-conflict
     -   id: mixed-line-ending
